--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <title>Pentago</title>
 </head>
 <body>
-<h3> Pentago!!! </h3>
 <div id="root">
 
 </div>
 <script type="text/babel"  src="GameBoard.js">
 </script>
+<script type="text/babel" src="animations.js"></script>
 </body>
 </html>
