rotate a little better, rotate AI

--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
     <title>Pentago</title>
 </head>
 <body>
+<aside>
+    <input type="button" class="b" onclick="location.href='indexGameWon.html';" value="Fun" />
+    <input type="button" class="b" onclick="location.href='index.html';" value="New Game" />
+</aside>
 <div id="root">
 
 </div>
 <script type="text/babel"  src="GameBoard.js">
 </script>
-<script type="text/babel" src="animations.js"></script>
 </body>
 </html>
